# RAGInquiry

./: README.md  config.py  pyproject.toml  test.ipynb  upload.py  web.py
.config/: md5_text.txt
chromaDb/55278971-e26b-4ce5-a064-7b62a781bbe9/: index_metadata.pickle
chromaDb/88ea4c0f-1ab0-4cd1-aa40-3efac9dab2e5/: index_metadata.pickle
history/: chat_history.db
src/: KnowledgeBase.py  RagServer.py  VectorsServer.py  pdf.py  utils.py
upload_file/: 招股书.txt
