[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RAGInquiry"
version = "0.0.1"
description = "测试"
authors = [
    {name = "zwy", email = "15133687879@163.com"}
]
# 运行所需的依赖
dependencies = [
    "requests>=2.28.0",
    "langchain_chroma",
    "langchain_community",
    "langchain_text_splitters",
    "streamlit",
    "pdfplumber",
]
requires-python = ">=3.11"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.packages.find]
where = ["."]